--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
 </head>
 <body>
   <div>
+    <h2>Enter Password</h2>
     <input type="password" id="pw" />
-    <button onclick="check()">Submit</button>
+    <button id="submitBtn">Submit</button>
     <p id="error" style="color: red; display: none;">Incorrect password</p>
   </div>
 
-  <script src="main.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
