--- a/index.html
+++ b/index.html
@@ -2,15 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>360</title>
+  <title>Password Check</title>
 </head>
 <body>
-  <div>
-    <h2>Enter Password</h2>
-    <input type="password" id="pw" />
-    <button id="submitBtn">Submit</button>
-    <p id="error" style="color: red; display: none;">Incorrect password</p>
-  </div>
+  <h2>Enter Password</h2>
+  <input type="password" id="pw" />
+  <button id="submitBtn">Submit</button>
+  <p id="error" style="color: red; display: none;">Incorrect password</p>
 
   <script src="script.js"></script>
 </body>
